src/test/ui/rust-2018/uniform-paths-forward-compat/block-scoped-shadow.stderr
error[E0659]: `std` is ambiguous (name vs any other name during import resolution)
  --> $DIR/block-scoped-shadow.rs:18:9
   |
LL |     use std as foo;
   |         ^^^ ambiguous name
   |
note: `std` could refer to the enum defined here
  --> $DIR/block-scoped-shadow.rs:17:5
   |
LL |     enum std {}
   |     ^^^^^^^^^^^
note: `std` could also refer to the struct defined here
  --> $DIR/block-scoped-shadow.rs:13:1
   |
LL | struct std;
   | ^^^^^^^^^^^
   = help: use `self::std` to refer to the struct unambiguously

error[E0659]: `std` is ambiguous (name vs any other name during import resolution)
  --> $DIR/block-scoped-shadow.rs:18:9
   |
LL |     use std as foo;
   |         ^^^ ambiguous name
   |
note: `std` could refer to the function defined here
  --> $DIR/block-scoped-shadow.rs:16:5
   |
LL |     fn std() {}
   |     ^^^^^^^^^^^
note: `std` could also refer to the unit struct defined here
  --> $DIR/block-scoped-shadow.rs:13:1
   |
LL | struct std;
   | ^^^^^^^^^^^
   = help: use `self::std` to refer to the unit struct unambiguously

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0659`.
